# name: test_matches_expected_type
  <class 'dict'> {
    'date_created': <class 'datetime'>,
    'nested': <class 'dict'> {
      'id': <class 'int'>,
    },
    'some_uuid': <class 'UUID'>,
  }
---
# name: test_raises_unexpected_type
  <class 'dict'> {
    'date_created': <class 'datetime'>,
    'date_updated': datetime.date(2020, 6, 1),
    'nested': <class 'dict'> {
      'id': <class 'int'>,
    },
    'some_uuid': <class 'UUID'>,
  }
---
